--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
+    "react-router-dom": "^6.26.0",
     "react-scripts": "5.0.1"
   },
   "scripts": {
@@ -39,6 +40,10 @@
     ]
   },
   "devDependencies": {
-    "ajv": "^7.2.4"
+    "@types/react": "^18.3.3",
+    "ajv": "^7.2.4",
+    "eslint": "^9.9.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-react": "^7.35.0"
   }
 }
