--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^5.16.7",
     "@mui/material": "^5.16.7",
+    "@mui/styles": "^5.16.7",
     "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.3",
     "millify": "^6.1.0",
