feat: added util to format price, component of crypto currency statistic card and updated details page

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -8,7 +8,7 @@
     "paths": {
       "@components/*": ["src/components/*"],
       "@assets/*": ["assets/*"],
-      "@utils/*": ["utils/*"],
+      "@utils/*": ["src/utils/*"],
       "@styles/*": ["styles/*"],
       "@mui/*": ["node_modules/@mui/material/*"]
     }
